[gd_scene load_steps=2 format=3 uid="uid://c9k5l6m7n8o9"]

[ext_resource type="Script" path="res://scripts/core/TradingUI.gd" id="1_trade"]

[node name="TradingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trade")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 400.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Market"

[node name="FundsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Funds: $0.00"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Buy 100"

[node name="SellButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sell 100"

[node name="CompanyList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
